<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.psx.ancillaryscreens.screens.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Weight is 3-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:padding="8dp"
            android:src="@drawable/govt_logo"
            tools:ignore="ContentDescription" />


        <!--Weight is 10-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="12"
                android:background="@drawable/border_black"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="Login"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="Username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusLeft="@+id/login_password"
                        android:nextFocusRight="@+id/login_password"
                        android:nextFocusUp="@+id/login_password"
                        android:nextFocusDown="@+id/login_password"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="Password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                </LinearLayout>


                <Button
                    android:id="@+id/login_submit"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="Submit"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/helpline_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="2.1"
                    android:background="@drawable/button_border_blue"
                    android:drawableLeft="@drawable/ic_call_blue_24dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="HELPLINE"
                    android:textAlignment="center"
                    android:textColor="@color/app_blue" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="Forgot Password?"
                    android:textAlignment="center"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>

        <!--Weight is 2-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@id/vertical_divider"
                android:layout_toLeftOf="@id/vertical_divider"
                android:src="@drawable/ssa_logo"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@id/vertical_divider"
                android:layout_toRightOf="@id/vertical_divider"
                android:padding="20dp"
                android:src="@drawable/samarth_logo"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/vertical_divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>