...
                android:layout_height="wrap_content">

            </EditText>

            <Button
                android:layout_weight="0.5"
                android:text="SUBMIT"
                android:layout_marginTop="18dp"
                style="@style/LoginButtonStyle"
                android:id="@+id/password_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

...
